--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -20,13 +20,21 @@
   }
 
   &__socials {
-    position: absolute;
-    top: 50%;
-    border: 2px solid #eee;
-    border-left: 2px solid #eee;
-    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4rem auto 0 auto;
+    gap: 2.5rem;
+    background: none !important;
+    box-shadow: none !important;
+    border: none !important;
+    padding: 0;
+    margin-top: 6rem;
     @include respond(tab-port) {
-      display: none;
+      margin-top: 3rem;
+    }
+    @include respond(phone) {
+      margin-top: 2rem;
     }
   }
   &__mouse-scroll-cont {
